2003-01-18  Just van Rossum <just@letterror.com>
    * Make AppKit.NSApplicationMain() propagate exceptions back to Python.
    * Include the entire exception info (type, value and traceback) when
      converting a Python exception to an NSException. This is needed to
      get a complete traceback.

2003-01-18  Ronald Oussoren <oussoren@cistron.nl>
    * Remove the PyOBJC_UNIQUE_PROXY option, it is always on anyway.
    * Remove mechanism for registering methods that return a 'new'
      instead of a 'borrowed' reference. This mechanism is too
      simplistic.
    * Initial support for special support of init methods: These return
      self, and if they don't the old value of self probably is no longer
      valid. 
    * Bugfixes in libffi support
    * Some performance enhancements, the effects are fairly minor.
      I'm not too happy about the new version for objc_methodlist_magic, I'll
      probably revert this change later on.
    * Add workaround for a feature of NSData: 
    	x = NSData.alloc()
	    y = x.initWithBytes_len_(foo, bar)
      The initWithBytes_len_ call above acts like realloc(): 'x' might no
      longer be a pointer to a valid object. 
    * Add <class>.pyobjc_classMethods, <object>.pyobjc_classMethods and
      <object>.pyobjc_instanceMethods. The attributes of these attributes
      are the class and instance-methods of the <class> or <object>.
    * Typo in "Project Templates/00README.txt"

2003-01-18  Bill Bumgarner  <bbum@codefab.com>

    * Modules/objc/OC_PythonDictionary.m ([OC_PythonDictionary
      -objectForKey:]): Fixed -objectForKey: to return nil if key did not
      exist (previously, it would segfault).   This mimics NSDictionary
      behavior.

    * Lib/Foundation: moved conversion functions to their own module;
      Conversion.   collections unit test now tests conversion and conversion
      helpers.

2003-01-17  Bill Bumgarner  <bbum@codefab.com>